infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sayurpintar
  labels:
    app.kubernetes.io/name: sayurpintar
    app.kubernetes.io/part-of: sayurpintar
