infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sayurpintar-api-service
  namespace: sayurpintar
  labels:
    app: sayurpintar-api
spec:
  type: ClusterIP
  selector:
    app: sayurpintar-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
